# Coflot

./: .buildinfo  .dockerignore  .gitignore  Dockerfile  README.md  coflot_bringup_fleet_launch.html  coflot_bringup_fleet_readme.html  docker-compose.yaml  fleet_adapter.html  fleet_adapter_readme.html  fleet_interfaces_msg.html  fleet_interfaces_readme.html  fleet_simulation.html  fleet_simulation_readme.html  genindex.html  index.html  mission_manager.allocation_strategies.html  mission_manager.core.html  mission_manager.html  mission_manager_readme.html  nginx.conf  objects.inv  py-modindex.html  search.html  searchindex.js  workspace_readme.html
IHM/: index.html  index_v1.html  index_v2.html  style.css
IHM/js/: PointData.js  UIManager.js  main.js
IHM/v10/js/: MapManager.js  RosManager.js  UIManager.js  main.js
IHM/v11/: index.html
IHM/v11/js/: Config.js  RosManager.js  UIManager.js  main.js
IHM/v12/js/: Config.js  MapManager.js  RosManager.js  UIManager.js
IHM/v13/: index.html
IHM/v13/js/: MapManager.js
IHM/v14/: index.html  style.css
IHM/v14/js/: Config.js  MissionManager.js  RosManager.js  UIManager.js  main.js
IHM/v15/: index.html
IHM/v15/js/: Config.js  MapManager.js
IHM/v16/js/: main.js
IHM/v17/js/: MapManager.js
IHM/v18/: index.html  style.css
IHM/v18/js/: MapManager.js  RosManager.js  UIManager.js
IHM/v19/: style.css
IHM/v19/js/: PointData.js  UIManager.js  main.js
IHM/v20/: index.html  style.css
IHM/v20/js/: MapManager.js  UIManager.js
IHM/v21/js/: PointData.js  UIManager.js
IHM/v22/js/: MissionManager.js  UIManager.js
IHM/v23/js/: Config.js  MapManager.js  RosManager.js
IHM/v3/: index.html  main.js  style.css
IHM/v4/: index.html  main.js  style.css
IHM/v5/: index.html  main.js  style.css
IHM/v6/: style.css
IHM/v7/js/: Config.js  MapManager.js  main.js
IHM/v8/: main.js
IHM/v8/js/: MapManager.js  RosManager.js  UIManager.js  main.js
IHM/v9/js/: MapManager.js  main.js
_modules/: index.html
_modules/fleet_adapter/: fleet_adapter.html
_modules/fleet_simulation/: fleet_simulation.html
_modules/mission_manager/: mission_manager_node.html
_modules/mission_manager/allocation_strategies/: allocation_interface.html  base_strategy.html  closest_strategy.html  naive_queue_strategy.html  utility_strategy.html
_modules/mission_manager/core/: mission.html  mission_registry.html  robot.html  robot_adapter.html  robot_pool.html
_sources/: coflot_bringup_fleet_launch.rst.txt  coflot_bringup_fleet_readme.md.txt  fleet_adapter.rst.txt  fleet_interfaces_msg.rst.txt  fleet_simulation.rst.txt  index.rst.txt  mission_manager.allocation_strategies.rst.txt  mission_manager.core.rst.txt  mission_manager.rst.txt  mission_manager_readme.md.txt
decision_ws/: README.md  generate_docs_config.py
decision_ws/docs/: .gitignore  build_docs.sh  deploy_docs.sh  requirements.txt
decision_ws/docs/source/: conf.py
decision_ws/src/coflot_bringup_fleet/: package.xml  setup.cfg  setup.py
decision_ws/src/coflot_bringup_fleet/doc/source/: conf.py  index.rst
decision_ws/src/coflot_bringup_fleet/launch/: bringup.launch.py
decision_ws/src/coflot_bringup_fleet/maps/: salle2.pgm
decision_ws/src/fleet_adapter/: README.md  package.xml  setup.py
decision_ws/src/fleet_adapter/fleet_adapter/: fleet_adapter.py
decision_ws/src/fleet_interfaces/: CMakeLists.txt  README.md  package.xml
decision_ws/src/fleet_interfaces/msg/: MissionRequest.msg  MissionState.msg  MissionStateArray.msg  RobotState.msg  RobotStateArray.msg
decision_ws/src/fleet_manager/: dispatcher.py  package.xml  setup.py
decision_ws/src/fleet_manager/fleet_manager/: dispatcher.py
decision_ws/src/fleet_simulation/: README.md  package.xml  setup.cfg  setup.py
decision_ws/src/fleet_simulation/fleet_simulation/: fleet_simulation.py  mock_fleet_v2.py  mock_fleet_v3.py
decision_ws/src/fleet_simulation/launch/: simulation.launch.py
decision_ws/src/kobuki_etat/: package.xml
decision_ws/src/kobuki_etat/msg/: RobotEtat.msg
decision_ws/src/kobuki_etat/src/: robot_etat_node.py
decision_ws/src/mission_dispatcher_pkg/: cost_estimator.py  mission_dispatcher.md
decision_ws/src/mission_manager/: package.xml  rosdoc2.yaml  setup.py
decision_ws/src/my_fleet_manager/: CMakeLists.txt  package.xml
decision_ws/src/my_fleet_manager/msg/: Mission.msg  Tache.msg
decision_ws/src/my_fleet_manager/src/: mission_to_task_node.py
decision_ws/src/web_manager/: CMakeLists.txt  package.xml
decision_ws/src/web_manager/launch/: web_manager_launch.py
decision_ws/src/web_manager/src/: web_reception.py  web_server.py
decision_ws/src/web_manager/web/: web-coflot.html
decision_ws/src/web_manager/web/js/: app.js
decision_ws/src/web_manager/web/map/: map.yaml
robot_ws/: kobuki_bringup.py
robot_ws/src/coflot_bringup/: CMakeLists.txt  package.xml
robot_ws/src/kobuki_etat/: CMakeLists.txt
robot_ws/src/kobuki_pose/: package.xml  setup.cfg  setup.py
robot_ws/src/robot_pose_pkg/: package.xml  setup.cfg  setup.py
robot_ws/src/rplidar_ros/: CMakeLists.txt
(+33 files in other folders)
