<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>coflot_bringup_fleet</name>
  <version>1.0.0</version>
  <description>Package de démarrage et de configuration pour la flotte coflot.</description>
  
  <maintainer email="vik.forc38@gmail.com">victor</maintainer>
  <author email="vik.forc38@gmail.com">victor</author>
  
  <license>Apache-2.0</license>

  <depend>nav2_map_server</depend>
  <depend>nav2_lifecycle_manager</depend>
  <depend>rosbridge_server</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
    <rosdoc2>rosdoc2.yaml</rosdoc2>
  </export>
</package>