<?xml version="1.0"?>
<package format="3">
  <name>web_manager</name>
  <version>0.0.1</version>
  <description>Package permettant de recevoir les infos de l'interface web</description>
  <maintainer email="victor@centrale.centralelille.fr">victor</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- Runtime dependencies -->
  <depend>rclpy</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Déclarer comme package d’interface -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
